# dclaw-design

./: .gitignore  AGENTS.md  README.md  REVISED-PRD.md  docker-compose.yml
.github/workflows/: build-backend.yml  build-desktop.yml  build-frontend.yml  deploy.yml
adr/: 001-monorepo-structure.md  002-async-video-pipeline.md  003-local-ai-stack.md  004-minio-storage.md
api-spec/: openapi.yaml
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  main.py  models.py  schemas.py  seed.py
backend/app/routers/: canvas.py  export.py  generate.py  health.py  templates.py
backend/app/services/: generation.py
backend/dclaw_design_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
db-schema/: schema.sql
docs/: README.md  meta.json
docs/getting-started/: configuration.md  index.md  installation.md  quickstart.md
docs/guides/: index.md  use-cases.md
docs/reference/: api.md  architecture.md  index.md
docs/releases/: index.md
docs/troubleshooting/: common-issues.md  faq.md  index.md
frontend/: .env.example  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/brand-kit/: page.tsx
frontend/app/canvas/: page.tsx
frontend/components/ai-chat/: chat-panel.tsx
frontend/lib/: api.ts
frontend/public/: dclaw-manifest.json
frontend/types/: index.ts
helm/: Chart.yaml  values.yaml
helm/dclaw-design/: Chart.yaml  values.yaml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
ui-ux/: screen-specs.md
(+4 files in other folders)
