[package]
name = "dclaw-design"
version = "0.1.0"
description = "DClaw Design — AI-Native Design Studio"
authors = ["DClaw Stack"]
edition = "2021"

[lib]
name = "dclaw_design_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }
